# math-logic

./: .gitignore  CMakeLists.txt
full/: Makefile  Proof (1).txt  Proof (2).txt  intuitionistic.cpp  minimize.cpp  parse.cpp  prove.cpp  test.cpp  theorem.cpp
full/grammar/: grammar.cpp  grammar.hpp
full/parser/: expression_hash.cpp  expression_hash.hpp  parser.cpp  parser.hpp
full/proof/: proof_converter.hpp  proof_creator.hpp  proof_translator.hpp  proof_translators.hpp  proof_utils.cpp  proof_utils.hpp
light.parser/: Makefile  parser.py  tree.py
